--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     <h2>About the Author</h2>
     <div class="card bio-card">
       <p>
-        <strong>[Your Name]</strong> is a Construction Management student at
+        <strong>Ramzey Insignares</strong> is a Construction Management student at
         <strong>California Polytechnic State University, San Luis Obispo</strong>. Their academic
         interests include project planning, safety management, and the integration of emerging
         technologies into construction practice. Through coursework and independent research,
