--- a/works-cited.html
+++ b/works-cited.html
@@ -25,9 +25,7 @@
   <div class="container">
     <h2>Works Cited</h2>
     <p class="section-lead">
-      This page lists the primary sources that informed the analysis and advocacy presented on
-      this website. Citations are formatted in MLA style. In-text references on other pages
-      are intended to link back to this list.
+    
     </p>
     <ul class="citation-list">
       <li>
@@ -47,18 +45,11 @@
       </li>
     </ul>
     <p class="small">
-      Note: Depending on the final version of your technical report, you may wish to add or
-      replace sources in this list with additional peer-reviewed articles, textbooks, or
-      industry reports that you have used in your research.
+
     </p>
   </div>
 </section>
 
   <footer>
     <div class="container">
-      <div>© 2025 Building Safer Futures. Created for an academic advocacy project.</div>
-      <div>For full citations, visit the <a href="works-cited.html">Works Cited</a> page.</div>
-    </div>
-  </footer>
-</body>
-</html>
+      <div>© 2025 Building Safer Futures. 
