--- a/about.html
+++ b/about.html
@@ -66,9 +66,4 @@
 
   <footer>
     <div class="container">
-      <div>© 2025 Building Safer Futures. Created for an academic advocacy project.</div>
-      <div>For full citations, visit the <a href="works-cited.html">Works Cited</a> page.</div>
-    </div>
-  </footer>
-</body>
-</html>
+      <div>© 2025 Building Safer Futures. 
